--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "pg": "^7.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
